# plotperfectclient

./: CMakeLists.txt  LICENSE  README.md  plotMsgPack.h  plotMsgTypes.h  plotThreading.h  sendMemoryToPlot.c  sendMemoryToPlot.cpp  sendMemoryToPlot.h  sendTCPPacket.h  smartPlotMessage.c  smartPlotMessage.cpp  smartPlotMessage.h  smartPlotMessage.py  timePlot.h
test/: testPythonPlotting.py
